[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctk_opencv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.7"]
